--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
-:root{
+:root {
     --primary-color: #F9A826;
+    --off-yellow: #fefce8;
+    --dark-gray: #64748b;
 }
 
 body {
@@ -20,59 +22,92 @@ body {
 }
 
 /* links */
-.link{
+.link {
     text-decoration: none;
     padding: 0.5rem 1rem;
 }
 
-.link-primary{
+.link-primary {
     background-color: var(--primary-color);
     border-radius: 0.5rem;
-    color:white;
+    color: white;
 }
 
-.link-secondary{
+.link-secondary {
     color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
 }
 
-hr{
+hr {
     margin: 2rem 0rem;
 }
 
-.list-non-bullet{
+.list-non-bullet {
     list-style: none;
 }
 
-.list-item-inline{
+.list-item-inline {
     display: inline;
     padding: 0rem 0.5rem;
 }
 
-.navigation{
+.navigation {
     background-color: var(--primary-color);
     color: white;
     padding: 1rem;
     border-bottom-left-radius: 1rem;
 }
 
-.nav-pills{
-    color:white;
-}
-
-.navigation .nav-brand{
-font-weight: bold;
-}
-
-.navigation .nav-pills{
-    text-align: right;
-}
-
-.navigation .link{
+.nav-pills {
     color: white;
 }
 
-.navigation .link-active{
+.navigation .nav-brand {
     font-weight: bold;
+}
+
+.navigation .nav-pills {
+    text-align: right;
+}
+
+.navigation .link {
+    color: white;
+}
+
+.navigation .link-active {
+    font-weight: bold;
+}
+
+/* header */
+
+.hero {
+    padding: 2rem;
+}
+
+.hero .hero-img {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+.hero .hero-heading {
+    color: var(--dark-gray);
+    padding-top: 1rem;
+}
+
+.hero .hero-heading .heading-inverted {
+    color: var(--primary-color);
+}
+
+.section{
+    padding: 2rem;;
+}
+.section h1 {
+    text-align: center;
+    padding: 2rem;
+}
+
+.oy{
+    background-color: var(--off-yellow);
 }
