--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
 .link {
     text-decoration: none;
     padding: 0.5rem 1rem;
+    margin: 1rem;
 }
 
 .link-primary {
@@ -108,11 +109,14 @@ hr {
 }
 .section h1 {
     text-align: center;
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .ow{
     background-color: var(--off-white);
+    max-width: 900px;
+    border-radius: 25px;
+
 }
 
 /* footers */
